[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autocarter"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "7d", email = "61975820+iiiii7d@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "click",
  "sympy",
  "networkx",
  "svg.py",
  "vector",
]

[project.urls]
Documentation = "https://github.com/unknown/autocarter#readme"
Issues = "https://github.com/unknown/autocarter/issues"
Source = "https://github.com/unknown/autocarter"

[project.scripts]
autocarter = "autocarter.cli:autocarter"

[tool.hatch.version]
path = "src/autocarter/__about__.py"

[tool.hatch.envs.default]
python = "3.12"
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/autocarter tests}"

[tool.coverage.run]
source_pkgs = ["autocarter", "tests"]
branch = true
parallel = true
omit = [
  "src/autocarter/__about__.py",
]

[tool.coverage.paths]
autocarter = ["src/autocarter", "*/autocarter/src/autocarter"]
tests = ["tests", "*/autocarter/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
